Added drag functionality

--- a/src/components/Board/List.module.scss
+++ b/src/components/Board/List.module.scss
@@ -3,6 +3,8 @@
   grid-auto-rows: max-content;
   grid-gap: 0.5rem;
   padding: 1rem;
+  padding-bottom: 4rem;
+  background-color: #888;
   border-radius: 8px;
 
   .content {
