--- a/src/components/Kanban/Kanban.module.scss
+++ b/src/components/Kanban/Kanban.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-auto-columns: 300px;
   grid-auto-flow: column;
+  gap: 2rem;
 
   background-color: #f5f6f8;
   height: 100vh;
