--- a/src/components/Board/List.module.scss
+++ b/src/components/Board/List.module.scss
@@ -3,13 +3,17 @@
   grid-auto-rows: max-content;
   grid-gap: 0.5rem;
   padding: 1rem;
-  padding-bottom: 4rem;
-  background-color: #888;
+  background-color: #aaa;
   border-radius: 8px;
 
   .content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
+
+  .dropText {
+    text-align: center;
+    padding: 5rem;
   }
 }
