--- a/src/components/Board/List.module.scss
+++ b/src/components/Board/List.module.scss
@@ -4,7 +4,7 @@
   grid-gap: 0.5rem;
   padding: 1rem;
   background-color: #aaa;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
 
   .content {
     display: flex;
