--- a/src/components/Kanban/Kanban.module.scss
+++ b/src/components/Kanban/Kanban.module.scss
@@ -7,4 +7,25 @@
 
   background-color: #f5f6f8;
   height: 100vh;
+
+  .add {
+    background-color: #333;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    input {
+      padding: 0.5rem;
+    }
+
+    button {
+      padding: 0.5rem;
+
+      &:hover {
+        cursor: pointer;
+        filter: brightness(80%);
+      }
+    }
+  }
 }
