--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -5,6 +5,25 @@
   box-shadow: 0px 10px 17px -10px rgba(0, 0, 0, 0.59);
   margin-bottom: 10px;
   position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .delete {
+    all: unset;
+
+    padding: 0.5rem;
+    background-color: #d51f2c;
+    color: #fff;
+    border: 2px solid #333;
+    border-radius: 2px;
+
+    &:hover {
+      cursor: pointer;
+      filter: brightness(80%);
+    }
+  }
 }
 
 .hidden {
